# Resume-Matcher

./: .backend-guide.md  .dockerignore  .front-end-apis.md  .frontend-workflow.md  .gemini.md  .gitignore  .impeccable.md  .mega-linter.yml  .nixpacks.toml  .pre-commit-config.yaml  .railwayignore  .style-guide.md  52f0c653-4a2c-4696-9ed2-4204b10660ca.json  8d654a81-6425-44fa-985f-54fb9af24236.json  AGENT.md  AGENTS.md  AIDOCS.md  CODE_OF_CONDUCT.md  COMPLETE_FIX_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_STATUS.md  DOCKER.md  DOCKER_REMOTE_ACCESS.md  Data.py  DataReader.py  Distill.py  Distill_2.py  Dockerfile  Dockerfile.backend  Dockerfile.frontend  ENTER_KEY_FIX.md  Extractor.py  FIX_ISSUE_409.md  FIX_SUMMARY.md  GEMINI.md  Howtorunthis.md  INSTALL.md  JSON_PARSING_FIX.md  Job_Data.csv  (+122 more)
apps/backend/: .env.example  .env.sample  .gitignore  CLAUDE.md  Dockerfile  MIGRATIONS_README.md  Procfile  README.md  ResumeMatcher.spec  alembic.ini  debug_hooks.py  install_docx_deps.py  mypy.ini  package.json  print_settings.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  run.py  run_migrations.py  schema.sql  serve.py  test_deps.spec  test_docx_dependencies.py  test_fastapi.spec  test_hello_light.spec  test_imports.spec  test_markitdown.spec  test_markitdown_light.spec  test_pyinstaller.spec
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_make_content_hash_nullable.py  0003_add_performance_indexes.py  0004_credit_ledger.py  001_rename_compensation_column.py
apps/backend/app/: __init__.py  base.py  config.py  config_cache.py  crypto.py  database.py  db_engine.py  llm.py  main.py  models.py  pdf.py
apps/backend/app/agent/: __init__.py  cache_utils.py  embedding_cache.py  exceptions.py  manager.py
apps/backend/app/api/: __init__.py  body_limit.py  middleware.py  rate_limit.py
apps/backend/app/core/: __init__.py  algorithms.py  auth.py  cache.py  config.py  database.py  error_codes.py  exceptions.py  redaction.py  security.py
apps/backend/app/data/: skill_taxonomy.py
apps/backend/app/metrics/: counters.py
apps/backend/app/models/: __init__.py  association.py  credits.py  job.py  llm_cache.py  resume.py
apps/backend/app/prompt/: __init__.py  base.py  resume_analysis.py  resume_improvement.py  structured_job.py  structured_resume.py
apps/backend/app/prompts/: __init__.py  ats.py  creation.py  enrichment.py  refinement.py  resume_wizard.py  templates.py
apps/backend/data/: config.json  custom_instructions.md  details.md.example
apps/backend/e2e_monitor/: AGENT_PLAYBOOK.md  README.md  __init__.py  __main__.py  baseline.py  bundle.py  collect.py  flow.py  gate.py  install_skill.sh  judge.py  manifest.py  render.py  scrub.py  servers.py
apps/backend/scripts/: __init__.py  auth_dep_smoke.py  auth_smoke.py  debug_matching_zero.py  detect_schema_drift.py  e2e_full_flow.py  e2e_semantic_eval.py  run_metrics_tests.ps1  smoke_test_neon_async.py  sqlite_to_postgres_migrate.py  update_openapi_snapshot.py
apps/backend/tests/: conftest.py  openapi.snapshot.json  test_auth_smoke.py  test_credits_flow.py  test_error_envelope.py  test_improve_endpoint.py  test_improver_diff.py  test_integration_resume_job_flow.py  test_job_invalidation.py  test_json_size_limits.py  test_llm_cache.py  test_match_endpoint.py  test_match_endpoint_llm_integration.py  test_matching_service.py  test_openapi_snapshot.py  test_rate_limit.py  test_redaction.py  test_regenerate_endpoints.py  test_request_id_and_json_limit.py  test_require_llm_semantics.py  test_score_improvement_service.py  test_scoring.py  test_size_limits.py  test_success_envelope.py
(+1164 files in other folders)
