[project]
name = "rm-backend"
version = "1.0.0"
description = "Resume Matcher Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.4",
    "uvicorn==0.40.0",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "tinydb==4.8.2",
    "litellm==1.81.8",
    "markitdown[docx]==0.1.4",
    "pdfminer.six==20260107",
    "playwright==1.58.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
